--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.uaenaquiz"
+        applicationId "com.UaenaQuiz.uaenaquiz"
         minSdk 23
         targetSdk 32
         versionCode 1
