--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,116 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.uaenaquiz">
+    package="com.UaenaQuiz.uaenaquiz">
 
     <application
+        android:name="com.UaenaQuiz.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UaenaQuiz">
+
+
         <activity
-            android:name=".thirtieth"
+            android:name="com.UaenaQuiz.uaenaquiz.thirtieth"
             android:exported="false" />
         <activity
-            android:name=".twentyNinth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyNinth"
             android:exported="false" />
         <activity
-            android:name=".twentyEighth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyEighth"
             android:exported="false" />
         <activity
-            android:name=".twentySeventh"
+            android:name="com.UaenaQuiz.uaenaquiz.twentySeventh"
             android:exported="false" />
         <activity
-            android:name=".twentySixth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentySixth"
             android:exported="false" />
         <activity
-            android:name=".twentyFifth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyFifth"
             android:exported="false" />
         <activity
-            android:name=".twentyFourth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyFourth"
             android:exported="false" />
         <activity
-            android:name=".twentyThird"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyThird"
             android:exported="false" />
         <activity
-            android:name=".twentySecond"
+            android:name="com.UaenaQuiz.uaenaquiz.twentySecond"
             android:exported="false" />
         <activity
-            android:name=".twentyFirst"
+            android:name="com.UaenaQuiz.uaenaquiz.twentyFirst"
             android:exported="false" />
         <activity
-            android:name=".twentieth"
+            android:name="com.UaenaQuiz.uaenaquiz.twentieth"
             android:exported="false" />
         <activity
-            android:name=".nineteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.nineteenth"
             android:exported="false" />
         <activity
-            android:name=".eighteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.eighteenth"
             android:exported="false" />
         <activity
-            android:name=".seventeenth"
+            android:name="com.UaenaQuiz.uaenaquiz.seventeenth"
             android:exported="false" />
         <activity
-            android:name=".sixteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.sixteenth"
             android:exported="false" />
         <activity
-            android:name=".fifteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.fifteenth"
             android:exported="false" />
         <activity
-            android:name=".fourteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.fourteenth"
             android:exported="false" />
         <activity
-            android:name=".thirteenth"
+            android:name="com.UaenaQuiz.uaenaquiz.thirteenth"
             android:exported="false" />
         <activity
-            android:name=".twelfth"
+            android:name="com.UaenaQuiz.uaenaquiz.twelfth"
             android:exported="false" />
         <activity
-            android:name=".eleventh"
+            android:name="com.UaenaQuiz.uaenaquiz.eleventh"
             android:exported="false" />
         <activity
-            android:name=".tenth"
+            android:name="com.UaenaQuiz.uaenaquiz.tenth"
             android:exported="false" />
         <activity
-            android:name=".ninth"
+            android:name="com.UaenaQuiz.uaenaquiz.ninth"
             android:exported="false" />
         <activity
-            android:name=".ProblemList"
+            android:name="com.UaenaQuiz.uaenaquiz.ProblemList"
             android:exported="false" />
         <activity
-            android:name=".eighth"
+            android:name="com.UaenaQuiz.uaenaquiz.eighth"
             android:exported="false" />
         <activity
-            android:name=".seventh"
+            android:name="com.UaenaQuiz.uaenaquiz.seventh"
             android:exported="false" />
         <activity
-            android:name=".sixth"
+            android:name="com.UaenaQuiz.uaenaquiz.sixth"
             android:exported="false" />
         <activity
-            android:name=".fifth"
+            android:name="com.UaenaQuiz.uaenaquiz.fifth"
             android:exported="false" />
         <activity
-            android:name=".LastPage"
+            android:name="com.UaenaQuiz.uaenaquiz.LastPage"
             android:exported="false" />
         <activity
-            android:name=".fourth"
+            android:name="com.UaenaQuiz.uaenaquiz.fourth"
             android:exported="false" />
         <activity
-            android:name=".third"
+            android:name="com.UaenaQuiz.uaenaquiz.third"
             android:exported="false" />
         <activity
-            android:name=".second"
+            android:name="com.UaenaQuiz.uaenaquiz.second"
             android:exported="false" />
         <activity
-            android:name=".first"
-            android:exported="false" /> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+            android:name="com.UaenaQuiz.uaenaquiz.first"
+            android:exported="false" />
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <!-- Real AdMob app ID: ca-app-pub-3545555975398754~5411865355 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.UaenaQuiz.uaenaquiz.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
